// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`use case card should render use case card component for observability 1`] = `
<EuiCard
  betaBadgeProps={
    Object {
      "label": "Observability",
    }
  }
  data-test-subj="onboarding--observabilityUseCaseCard"
  description="Get end-to-end observability into your environments by consolidating your logs, metrics, and traces."
  display="subdued"
  footer={
    <EuiButton
      fill={true}
    >
      View guide
    </EuiButton>
  }
  image={
    <EuiImage
      alt="Observability logo"
      src="/plugins/home/assets/solution_logos/observability.png"
    />
  }
  onClick={[Function]}
  textAlign="center"
  title={
    <EuiTitle
      size="xs"
    >
      <h4>
        <strong>
          Monitor my environments
        </strong>
      </h4>
    </EuiTitle>
  }
/>
`;

exports[`use case card should render use case card component for search 1`] = `
<EuiCard
  betaBadgeProps={
    Object {
      "label": "Search",
    }
  }
  data-test-subj="onboarding--searchUseCaseCard"
  description="Create a finely-tuned search experience for your websites, applications, workplace content, and more."
  display="subdued"
  footer={
    <EuiButton
      fill={true}
    >
      View guide
    </EuiButton>
  }
  image={
    <EuiImage
      alt="Enterprise Search logo"
      src="/plugins/home/assets/solution_logos/search.png"
    />
  }
  onClick={[Function]}
  textAlign="center"
  title={
    <EuiTitle
      size="xs"
    >
      <h4>
        <strong>
          Search my data
        </strong>
      </h4>
    </EuiTitle>
  }
/>
`;

exports[`use case card should render use case card component for security 1`] = `
<EuiCard
  betaBadgeProps={
    Object {
      "label": "Security",
    }
  }
  data-test-subj="onboarding--securityUseCaseCard"
  description="Protect your environment against threats by unifying SIEM, endpoint security, and cloud security in one place."
  display="subdued"
  footer={
    <EuiButton
      fill={true}
    >
      View guide
    </EuiButton>
  }
  image={
    <EuiImage
      alt="Security logo"
      src="/plugins/home/assets/solution_logos/security.png"
    />
  }
  onClick={[Function]}
  textAlign="center"
  title={
    <EuiTitle
      size="xs"
    >
      <h4>
        <strong>
          Protect my environment
        </strong>
      </h4>
    </EuiTitle>
  }
/>
`;
